--- a/style.css
+++ b/style.css
@@ -6,3 +6,23 @@
 body {
     padding-top: 70px;
 }
+
+.header {
+  background-color: #007BFF;
+  color: white;
+  padding: 20px;
+}
+
+/* Estilos para botones */
+.btn-custom {
+  background-color: #007BFF;
+  color: white;
+}
+
+/* Estilos para el formulario */
+.form-container {
+  margin-top: 20px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
