--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 
 
 .header {
-  background-color: #007BFF; /* Color de fondo azul */
+  background-color: #f5cb7e; /* Color de fondo azul */
   color: white;
   padding: 20px;
   text-align: center;
