--- a/style.css
+++ b/style.css
@@ -10,6 +10,6 @@ head {
 }
 body {
     padding-top: 70px;
-    background-color: bisque;
+    background-color: rgb(239, 231, 220);
     color: white;
 }
