--- a/style.css
+++ b/style.css
@@ -4,12 +4,12 @@
 */
 
 head {
-  padding-top: 70px;
-  background-color: bisque;
-  color: white;
+    padding-top: 70px;
+    background-color: bisque;
+    color: white;
 }
 body {
     padding-top: 70px;
-    background-color: rgb(239, 231, 220);
-    color: white;
+    background-color: bisque;
+    color: rgb(159, 8, 8);
 }
