--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 .navbar {
-  background-color: #ffbf0e; /* Fondo azul */
+  background-color: #bbff0e; /* Fondo azul */
   padding: 10px 0; /* Añade espacio arriba y abajo de la barra */
 }
 
